# eumpa_studio

./: .env.1password.tpl  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
apps/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx
docs/operations/: local-start.md  server-topology.md
docs/superpowers/plans/: 2026-06-14-eumpa-studio-mvp-implementation.md  2026-06-17-shot-drawer-workflow.md  2026-06-18-attempt-centric-drawer.md  2026-06-18-drawer-input-polish-tickets.md
docs/superpowers/specs/: 2026-06-14-eumpa-studio-design.md  2026-06-17-shot-drawer-workflow-design.md  2026-06-18-attempt-centric-drawer-design.md
scripts/: dev.sh  setup-env.sh
src/eumpa_studio/: __init__.py  cli.py  config.py
src/eumpa_studio/db/: __init__.py  base.py  session.py
src/eumpa_studio/domain/: __init__.py  models.py  statuses.py
src/eumpa_studio/execution/: __init__.py  align.py  codex_prompt.py  comfy_client.py  jobs.py  worker.py  workflow_patch.py
src/eumpa_studio/export/: __init__.py  selected.py
src/eumpa_studio/server/: __init__.py  app.py  deps.py
src/eumpa_studio/storage/: __init__.py  media.py  paths.py
tests/backend/: conftest.py  test_alignment.py  test_assets.py  test_cli.py  test_codex_prompt.py  test_comfy_client.py  test_comfy_render.py  test_db_session.py  test_export.py  test_health.py  test_jobs.py  test_models.py  test_projects.py  test_prompts.py  test_review.py  test_settings.py  test_setup_env_script.py  test_shots.py  test_workflow_patch.py  test_workflows.py
(+36 files in other folders)
