[project]
name = "eumpa-studio"
version = "0.1.0"
description = "Internal AI music video production tool"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.111.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29.0",
    "pillow>=12.2.0",
]

[project.scripts]
eumpa-studio = "eumpa_studio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eumpa_studio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
